tests/security/taintedInputFromReturnTypeToEcho/output.txt
ERROR: TaintedData - input.hack:12:14 - Detected tainted HTML tags